WiP for JDK11 compile: new Long to Long.valueOf etc